--- a/frontend/menu/menu.jade
+++ b/frontend/menu/menu.jade
@@ -1,5 +1,5 @@
 span.title= title
-ul.list.flag-icon-background.flag-icon-cn
+ul.list
   - each item in items
     li
       a(href=item.href)= item.text
